<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        style="@style/texto"
        android:text="Dengue"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="48sp"
        android:layout_marginTop="16dp"/>
    <TextView
        style="@style/texto"
        android:text="@string/oquee_dengue"
        android:textStyle="italic"
        android:textSize="18sp"
        android:layout_marginTop="16dp"/>
    <TextView
        style="@style/texto"
        android:text="@string/transmissao_dengue"
        android:textStyle="italic"
        android:textSize="18sp"
        android:layout_marginTop="16dp"/>
    <TextView
        style="@style/texto"
        android:text="@string/sintomas_dengue"
        android:textStyle="italic"
        android:textSize="18sp"
        android:layout_marginTop="16dp"/>
    <TextView
        style="@style/texto"
        android:text="@string/tratamento_dengue"
        android:textStyle="italic"
        android:textSize="18sp"
        android:layout_marginTop="16dp"/>
    <TextView
        style="@style/texto"
        android:text="@string/prevenir_dengue"
        android:textStyle="italic"
        android:textSize="18sp"
        android:layout_marginTop="16dp"/>
</LinearLayout>
</ScrollView>